[package]
name = "mping"
version = "0.3.0"
authors = ["smallnest@gmail.com"]
license = "Apache-2.0"
readme = "README.md"
description = "an easy to use ping library, supports single target and multiple targets, has high throughput."
repository = "https://github.com/smallnest/mping-rs"
documentation = "https://docs.rs/mping/"
homepage = "https://crates.io/crates/mping"
keywords = ["network", "ping"]
categories = ["network-programming"]
autobenches = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
env_logger = "0.10.0"
ipnetwork = "0.20.0"
libc = "0.2.149"
log = "0.4.20"
pnet_packet = "0.34.0"
rand = "0.8.5"
rate_limit = "0.1.1"
socket2 = { version = "0.5.4", features = ["all"] }
structopt = "0.3.26"
ticker = "0.1.1"
